--- a/STYLES/conocenos.css
+++ b/STYLES/conocenos.css
@@ -23,6 +23,8 @@ body{
     justify-content: center;
     align-content: center;
     margin-top: 50px;
+    text-align: center;
+    padding: 0px 30px 60px 30px;
 }
 .footer{
     background-color: #581622;
