--- a/STYLES/estetica-facial.css
+++ b/STYLES/estetica-facial.css
@@ -9,13 +9,16 @@ body{
 }
 .titulo{
     color: #581622;
-    margin-top: 35px;
+    margin-top: 30px;
     font-size: 30px;
     padding: 0 0 10 25;
 }
 .logo{
     display: flex;
     justify-content: flex-start;
+}
+.logo-mobile{
+    display: none;
 }
 .generales{
     display: flex;
@@ -27,9 +30,11 @@ body{
 .tratamientos{
     color:#fde9e2;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-template-rows: 1fr 1fr;
-    padding: 25px 25px 195px 25px;
+    padding: 25px 25px 70px 25px;
+    gap: 50px;
+    justify-content: center;
 }
 .etiquetas{
     background-color:#581622;
@@ -50,3 +55,23 @@ body{
     flex-direction: row;
     gap: 20px;
 }
+@media only screen and (max-width: 600px) {
+    
+    .header{
+        align-items:center;
+    }
+    .titulo{
+        font-size: 15px;
+        text-align: center;
+    }
+    .logo-mobile{
+        display: block;
+    }
+    .logo{
+        display: none;
+    }
+    .generales{
+        font-size: 20px;
+        text-align: center;
+    }
+  }
