--- a/STYLES/tratamientos.css
+++ b/STYLES/tratamientos.css
@@ -9,13 +9,16 @@ body{
 }
 .titulo{
     color: #581622;
-    margin-top: 45px;
+    margin-top: 30px;
     font-size: 30px;
     padding: 0 0 10 25;
 }
 .logo{
     display: flex;
     justify-content: flex-start;
+}
+.logo-mobile{
+    display: none;
 }
 .generales{
     display: flex;
@@ -74,3 +77,23 @@ body{
     flex-direction: row;
     gap: 20px;
 }
+@media only screen and (max-width: 600px) {
+    
+    .header{
+        align-items:center;
+    }
+    .titulo{
+        font-size: 15px;
+        text-align: center;
+    }
+    .logo-mobile{
+        display: block;
+    }
+    .logo{
+        display: none;
+    }
+    .generales{
+        font-size: 20px;
+        text-align: center;
+    }
+  }
