--- a/STYLES/tratamientos.css
+++ b/STYLES/tratamientos.css
@@ -40,7 +40,7 @@ body{
     background-color:#581622;
     border-color: #fde9e2;
     border-style: solid;
-    border-width: 20px;
+    border-width: 0px;
     text-align: center;
 }
 .collapsible {
@@ -53,6 +53,17 @@ body{
     text-align: center;
     outline: none;
     font-size: 15px;
+  }
+  .collapsible:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: white;
+    float: right;
+    margin-left: 5px;
+  }
+  
+  .active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
   }
   
 .content {
