--- a/STYLES/contacto.css
+++ b/STYLES/contacto.css
@@ -17,3 +17,33 @@ body{
     display: flex;
     justify-content: flex-start;
 }
+.logo-mobile{
+    display: none;
+}
+.contacto{
+    color:#581622 ;
+    font-size: large;
+}
+#map {
+    height: 100%;
+  }
+  @media only screen and (max-width: 600px) {
+    
+    .header{
+        align-items:center;
+    }
+    .titulo{
+        font-size: 15px;
+        text-align: center;
+    }
+    .logo-mobile{
+        display: block;
+    }
+    .logo{
+        display: none;
+    }
+    .generales{
+        font-size: 20px;
+        text-align: center;
+    }
+  }
