--- a/STYLES/master.css
+++ b/STYLES/master.css
@@ -23,4 +23,7 @@ body{
    text-align: center;
 }
 @media only screen and (max-width: 600px) {
+    .nav{
+        grid-template-columns: 1fr;
+    }
   }
